name:                millennial-society-ghpages
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/millennial-society/millennial-society.github.io
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable millennial-society-ghpages
  main-is:             Site.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
